--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -13,6 +13,26 @@
     <earliest>$time_overview.earliest$</earliest>
     <latest>$time_overview.latest$</latest>
   </search>
+  <search id="agents_login_timerange_finder">
+    <query>| makeresults | addinfo | eval extra_earliest_time=relative_time(info_min_time, "-1d"), extra_latest_time=info_max_time</query>
+    <earliest>$time_overview.earliest$</earliest>
+    <latest>$time_overview.latest$</latest>
+    <done>
+      <set token="tkn_extra_earliest_time">$result.extra_earliest_time$</set>
+      <set token="tkn_extra_latest_time">$result.extra_latest_time$</set>
+      <set token="tkn_earliest_time">$result.info_min_time$</set>
+      <set token="tkn_latest_time">$result.info_max_time$</set>
+    </done>
+  </search>
+  <search>
+    <query>`default_index` sourcetype="3cx:queue_agent_logins" is_loggedin_in_queue=t ($hosts2$) ($queues1$) | dedup agent_num | eval Agent="Ext.".agent_num." - ".agent_fname." ".agent_lname | fields Agent | table Agent
+    | stats values(Agent) as Agent | eval Agents=mvjoin(Agent, "\",\"") | eval Agents="\"".Agents."\"" </query>
+    <earliest>$time_overview.earliest$</earliest>
+    <latest>$time_overview.latest$</latest>
+    <done>
+      <set token="tkn_agents_search">$result.Agents$</set>
+    </done>
+  </search>
   <fieldset submitButton="false">
     <input type="time" token="time_overview">
       <label>Time</label>
@@ -168,11 +188,12 @@
 | timechart span=1h count by call_dir
 | eval Hour=strftime(_time,"%H") 
 | stats $tkn_aggregation$(*) as * by Hour
-| append [| search `default_index` sourcetype="3cx:agent_logins" $hosts2$ $queues1$
-| dedup ag_num, logintime
-| where secondsloggedin&gt;$tkn_agent_login_less_than$
-| eval starttime=strptime(logintime,"%Y-%m-%d %H:%M:%S%:::z"),endtime=strptime(logouttime,"%Y-%m-%d %H:%M:%S%:::z")
-| eval time = mvrange(starttime,endtime,"1h") | mvexpand time | eval _time = time
+| append [| search `default_index` sourcetype="3cx:queue_agent_logins" ($hosts2$) ($queues1$) earliest=$tkn_extra_earliest_time$ latest=$tkn_extra_latest_time$ | dedup idcallcent_ag_queuestatus
+| transaction q_num agent_num startswith="is_loggedin_in_queue=t" endswith="is_loggedin_in_queue=f" keepevicted=t | search eventcount=2
+| eval login_time=strptime(mvindex(timeofupdate,0), "%Y-%m-%d %H:%M:%S"), logout_time=strptime(mvindex(timeofupdate,1), "%Y-%m-%d %H:%M:%S")
+| dedup agent_num, login_time
+| where duration&gt;$tkn_agent_login_less_than$
+| eval time = mvrange(login_time,logout_time,"1h") | mvexpand time | where time&gt;=$tkn_earliest_time$ AND time&lt;=$tkn_latest_time$ | eval _time = time
 | timechart span=1h count
 | eval Hour=strftime(_time,"%H") | stats $tkn_aggregation$(count) as Agents_LoggedIn by Hour]
 | stats first(*) as * by Hour
@@ -198,7 +219,7 @@
 | eval call_dir=if(isnull(call_dir), "Other", call_dir)
 | eval Agent=mvfilter(!match(Agent,"N/A"))
 | mvexpand Agent
-| search [| search `default_index` sourcetype="3cx:agent_logins" ($queues1$) | dedup ag_num | eval Agent="Ext.".ag_num." - ".ag_fname." ".ag_lname | fields Agent | table Agent]
+| search Agent IN ($tkn_agents_search$)
 | chart count(call_id) as count over Agent by call_dir
 | fillnull Inbound, Outbound, Internal value=0</query>
         </search>
@@ -223,7 +244,7 @@
 | eval call_dir=if(isnull(call_dir), "Other", call_dir)
 | eval Agent=mvfilter(!match(Agent,"N/A"))
 | mvexpand Agent
-| search [| search `default_index` sourcetype="3cx:agent_logins" ($queues1$) | dedup ag_num | eval Agent="Ext.".ag_num." - ".ag_fname." ".ag_lname | fields Agent | table Agent]
+| search Agent IN ($tkn_agents_search$)
 | chart count(call_id) as count over Agent by call_dir
 | fillnull Inbound, Outbound, Internal value=0</query>
         </search>
@@ -258,7 +279,7 @@ $tkn_only_internal_call_seq$
 | mvexpand call_dir
 | eval Agent=mvfilter(!match(Agent,"N/A"))
 | mvexpand Agent
-| search [| search `default_index` sourcetype="3cx:agent_logins" ($queues1$) | dedup ag_num | eval Agent="Ext.".ag_num." - ".ag_fname." ".ag_lname | fields Agent | table Agent]
+| search Agent IN ($tkn_agents_search$)
 | chart count(call_id) as count over Agent by call_dir
 | fillnull Inbound, Outbound, Internal value=0</query>
         </search>
